charts/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
# ===============LICENSE_START=======================================================
# Acumos Apache-2.0
# ===================================================================================
# Copyright (C) 2019 AT&T Intellectual Property & Tech Mahindra. All rights reserved.
# ===================================================================================
# This Acumos software file is distributed by AT&T and Tech Mahindra
# under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# This file is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ===============LICENSE_END=========================================================
#
# What this is: ingress template for deploying the Jenkins helm chart

kind: Ingress
metadata:
  namespace: <NAMESPACE>
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - <K8S_INGRESS_DOMAIN>
    secretName: ingress-cert
  rules:
  - host: <K8S_INGRESS_DOMAIN>
    http:
      paths:
      - path: "/jenkins/"
        backend:
          serviceName: jenkins
          servicePort: 8080
